--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin>
     <id>com.github.mutl3y.ansiblehelper</id>
-    <name>ansibleHelper</name>
+    <name>AnsibleHelper</name>
     <vendor>mutl3y</vendor>
 
     <!-- Product and plugin compatibility requirements -->
@@ -10,6 +10,10 @@
     <extensions defaultExtensionNs="com.intellij">
         <applicationService serviceImplementation="com.github.mutl3y.ansiblehelper.services.MyApplicationService"/>
         <projectService serviceImplementation="com.github.mutl3y.ansiblehelper.services.MyProjectService"/>
+        <defaultLiveTemplates file="/liveTemplates/ansible_2_10_idea_live_template.xml"/>
+        <defaultLiveTemplates file="/liveTemplates/ansible_2_9_idea_live_template.xml"/>
+        <liveTemplateContext implementation="com.github.mutl3y.ansiblehelper.AnsibleContext"/>
+        <liveTemplateMacro implementation="com.github.mutl3y.ansiblehelper.TitleCaseMacro"/>
     </extensions>
 
     <applicationListeners>
