update d deteckt config

--- a/detekt-config.yml
+++ b/detekt-config.yml
@@ -6,3 +6,10 @@ formatting:
     continuationIndentSize: 8
   ParameterListWrapping:
     indentSize: 8
+
+output-reports:
+  active: false
+  exclude:
+  # - 'TxtOutputReport'
+  # - 'XmlOutputReport'
+  # - 'HtmlOutputReport'
