--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ pluginUntilBuild = 211.*
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions
 pluginVerifierIdeVersions = 2020.2.3
-
+gradleVersion = 8.2.1
 platformType = IU
 platformVersion = 2020.2
 platformDownloadSources = true
